orion-configuration/tests/set_filter_state/istio_waypoint_config.yaml
# Istio waypoint set_filter_state configuration test
# This simulates the filter config that Istio ambient mesh uses to extract
# the connect authority from HTTP CONNECT requests for HBONE tunnel routing

static_resources:
  listeners:
  - name: test_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15008
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: inbound_hcm
          codec_type: AUTO
          http_filters:
          # Set filter state to extract connect authority for HBONE routing
          - name: istio.set_filter_state
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
              value:
                on_request_headers:
                - object_key: io.istio.connect_authority
                  format_string:
                    text_format_source:
                      inline_string: "%REQ(:authority)%"
                # Additional filter state for client IP tracking
                - object_key: io.istio.client_address
                  format_string:
                    text_format_source:
                      inline_string: "%DOWNSTREAM_REMOTE_ADDRESS%"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: default_route
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: test_cluster
  clusters:
  - name: test_cluster
    type: STATIC
    connect_timeout: 5s
    load_assignment:
      cluster_name: test_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
